<resources>
    <string name="app_name">FishermanBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="main_text_size">Размер шрифта</string>
    <string name="main_text_settings">Шрифт\настройки</string>
    <string name="fish">Рыбы</string>
    <string name="na">Наживка</string>
    <string name="na0">Наживка...0</string>
    <string name="na1">Наживка...1</string>
    <string name="na2">Наживка...2</string>
    <string name="na3">Наживка...3</string>
    <string name="na4">Наживка...4</string>
    <string name="sna">Снасти</string>
    <string name="sna0">Снасти...0</string>
    <string name="sna1">Снасти...1</string>
    <string name="sna2">Снасти...2</string>
    <string name="sna3">Снасти...3</string>
    <string name="sna4">Снасти...4</string>
    <string name="pri">Прикормка</string>
    <string name="pri0">Прикормка...0</string>
    <string name="pri1">Прикормка...1</string>
    <string name="pri2">Прикормка...2</string>
    <string name="pri3">Прикормка...3</string>
    <string name="pri4">Прикормка...4</string>
    <string name="raz">Разное</string>
    <string name="raz0">Разное...0</string>
    <string name="raz1">Разное...1</string>
    <string name="raz2">Разное...2</string>
    <string name="raz3">Разное...3</string>
    <string name="raz4">Разное...4</string>
    <string name="spacer"></string>
    <string name="fish0">0 Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.
        Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона,
        а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации
        "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.."
        Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в
        качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает,
        как много веб-страниц всё ещё дожидаются своего настоящего рождения.
        За прошедшие годы текст Lorem Ipsum получил много версий.
        Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
        Откуда он появился? Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов,
        но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад.
        Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum,
        "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый первоисточник
        Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра и зла"), написанной Цицероном в 45 году н.э.
        Этот трактат по теории этики был очень популярен в эпоху Возрождения.
        Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в разделе 1.10.32
        Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33 "de Finibus Bonorum et Malorum"
        Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
    </string>
    <string name="fish1">1 Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.
        Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона,
        а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации
        "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.."
        Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в
        качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает,
        как много веб-страниц всё ещё дожидаются своего настоящего рождения.
        За прошедшие годы текст Lorem Ipsum получил много версий.
        Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
        Откуда он появился? Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов,
        но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад.
        Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum,
        "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый первоисточник
        Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра и зла"), написанной Цицероном в 45 году н.э.
        Этот трактат по теории этики был очень популярен в эпоху Возрождения.
        Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в разделе 1.10.32
        Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33 "de Finibus Bonorum et Malorum"
        Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
    </string>
    <string name="fish2">2 Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.
        Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона,
        а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации
        "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.."
        Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в
        качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает,
        как много веб-страниц всё ещё дожидаются своего настоящего рождения.
        За прошедшие годы текст Lorem Ipsum получил много версий.
        Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
        Откуда он появился? Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов,
        но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад.
        Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum,
        "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый первоисточник
        Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра и зла"), написанной Цицероном в 45 году н.э.
        Этот трактат по теории этики был очень популярен в эпоху Возрождения.
        Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в разделе 1.10.32
        Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33 "de Finibus Bonorum et Malorum"
        Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
    </string>
    <string name="fish3">3 Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.
        Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона,
        а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации
        "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.."
        Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в
        качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает,
        как много веб-страниц всё ещё дожидаются своего настоящего рождения.
        За прошедшие годы текст Lorem Ipsum получил много версий.
        Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
        Откуда он появился? Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов,
        но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад.
        Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum,
        "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый первоисточник
        Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра и зла"), написанной Цицероном в 45 году н.э.
        Этот трактат по теории этики был очень популярен в эпоху Возрождения.
        Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в разделе 1.10.32
        Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33 "de Finibus Bonorum et Malorum"
        Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
    </string>
    <string name="fish4">4 Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.
        Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона,
        а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации
        "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.."
        Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в
        качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает,
        как много веб-страниц всё ещё дожидаются своего настоящего рождения.
        За прошедшие годы текст Lorem Ipsum получил много версий.
        Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
        Откуда он появился? Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов,
        но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад.
        Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum,
        "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый первоисточник
        Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра и зла"), написанной Цицероном в 45 году н.э.
        Этот трактат по теории этики был очень популярен в эпоху Возрождения.
        Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в разделе 1.10.32
        Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33 "de Finibus Bonorum et Malorum"
        Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
    </string>
    <string name="logo_button">Start</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
</resources>