<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fish"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/fish"
            android:visibility="visible" />
        <item
            android:id="@+id/nav_na"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/na" />
        <item
            android:id="@+id/nav_sna"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sna" />
    </group>
    <item
        android:id="@+id/nav_sep"
        android:title="Разное">
    <menu>
    <item android:id="@+id/menu_pri"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/pri" />
    <item android:id="@+id/menu_raz"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/raz"  />
    </menu>
    </item>
</menu>